fixed an issue where h2 tag wasn't properly aligning with city item's image in each individual container in mobile or in desktop view, also fixed margins for description text for each city item as well

--- a/real-estate/src/css/Featured.css
+++ b/real-estate/src/css/Featured.css
@@ -116,7 +116,7 @@
   align-items: center;
   text-align: left;
   /* margin-top: 275px; */
-  margin-left: 90px;
+  margin-left: 150px;
   margin-right: 10px;
   padding-right: 20px;
 }
@@ -185,7 +185,7 @@
     position: absolute;
     color: #fff;
     text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.9);
-    font-size: 80px;
+    font-size: 60px;
     font-family: Oswald;
     margin-top: 30px;
     padding: 0;
@@ -210,13 +210,11 @@
 
   .description {
     font-size: 18px;
-    width: auto;
-    max-width: 70%;
-    height: auto;
-    /* max-height: 400px; */
-    /* margin-top: 40px;
-    margin-bottom: 20px;
-    margin-left: 0; */
+    margin: 25px;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    text-align: center;
   }
 }
 
